sandbox: Allow utility process to access the log file on Windows

Currently this is only allowed for renderer and gpu process. This CL
also allows it for utility process.

Also pass logging switches to the UtilityProcessHost. These switches
are already passed in ServiceUtilityProcessHost. Both are using
kUtilityProcess process type.

Bug: 888088
Change-Id: Ic26b9c9e6ce0c9024fb3ca4c8d352c5a283bef81
Reviewed-on: https://chromium-review.googlesource.com/1239172
Reviewed-by: Will Harris <wfh@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593588}
Former-commit-id: fe29a58304773b03a59e50af2d64627ff5d31765